src/test/deca/syntax/invalid/resultats/test8_int-synt.res
./src/test/deca/syntax/invalid/test8_int.deca:17:8: no viable alternative at input '12'
